back/tests/core/dependency_graph/fixtures/syntax_errors/has_syntax_error_also.cs
public class Person
{
    public string Name;

    another syntax error
    public Person(string name)
    {
        Name = name;
    }
}
